force-app/main/default/objects/Product_Bundle_Item__c/Product_Bundle_Item__c.object-meta.xml
<CustomObject>
    <label>Product Bundle Item</label>
    <nameField>
        <label>Product Bundle Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Bundle Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>