force-app/main/default/objects/Product_Bundle_Item__c/fields/Bundled_Item__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundled Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Bundle Item</relationshipLabel>
    <relationshipName>Product_Bundle_Item</relationshipName>
    <type>Lookup</type>
</CustomField>