force-app/main/default/objects/Product_Bundle_Item__c/fields/Netsuite_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Item_ID__c</fullName>
    <formula>Bundled_Item__r.Netsuite_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netsuite Item ID</label>
    <type>Text</type>
</CustomField>