force-app/main/default/objects/Product_Bundle_Item__c/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <label>Product Bundle</label>
    <referenceTo>Product_Bundle__c</referenceTo>
    <relationshipLabel>Product Bundle Item</relationshipLabel>
    <relationshipName>Product_Bundle_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>