force-app/main/default/objects/Product_Bundle_Item__c/fields/Quantity_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Maximum__c</fullName>
    <description>This is the maximum number of minutes, transcriptions, etc that go with this product bundle item.</description>
    <label>Quantity Maximum</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>